# node-high-scale-auth

./: .gitignore  AGENTS.md  CONCEPT.md  README.md  SCALING.md  TROUBLESHOOTING.md  docker-compose.yml
api-service/: Dockerfile  auth.js  package.json  server.js
auth-service/: Dockerfile  database.go  go.mod  handlers.go  jwt.go  main.go
auth-service-rust/: Cargo.toml  Dockerfile
auth-service-rust/src/: db.rs  handlers.rs  jwt.rs  main.rs  models.rs
database/: 01-schema.sql  02-seed.sql
nginx/: Dockerfile  nginx.conf
scripts/: README.md  generate-hashes.js  interactive-test.sh  smoke-test.sh  test-authorization.sh  test-full-flow.sh  test-login.sh
