[package]
name = "auth-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
